Fix for division dropdown being accidentally too wide

--- a/src/App.scss
+++ b/src/App.scss
@@ -302,6 +302,9 @@ select {
   button {
     margin: 5px;
   }
+  select {
+    max-width: 300px;
+  }
 }
 
 .App {
